--- a/HidenIntelligence/Views/Shared/_Layout.cshtml
+++ b/HidenIntelligence/Views/Shared/_Layout.cshtml
@@ -93,19 +93,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <optgroup label="Popular Cities">
                     <option selected style="display:none;color:#eee;">Thành phố</option>
                     <option>Birmingham</option>
-                    <option>Anchorage</option>
-                    <option>Phoenix</option>
-                    <option>Little Rock</option>
-                    <option>Los Angeles</option>
-                    <option>Denver</option>
-                    <option>Bridgeport</option>
-                    <option>Wilmington</option>
-                    <option>Jacksonville</option>
-                    <option>Atlanta</option>
-                    <option>Honolulu</option>
-                    <option>Boise</option>
-                    <option>Chicago</option>
-                    <option>Indianapolis</option>
                 </optgroup>
             </select>
             <div class="clearfix"></div>
@@ -216,7 +203,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <!-- search -->
                         <div class="col-10 agileits_search">
                             <form class="form-inline" action="#" method="get">
-                                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search" name="search" required>
+                                <input class="form-control mr-sm-2" type="search" placeholder="Nội dung tìm kiếm" aria-label="Search" name="search" required>
                                 <button class="btn my-2 my-sm-0" type="submit">Tìm kiếm </button>
                             </form>
                         </div>
