--- a/HidenIntelligence/Views/Home/Index.cshtml
+++ b/HidenIntelligence/Views/Home/Index.cshtml
@@ -121,7 +121,7 @@
                                     <div class="col-md-4 product-men mt-5">
                                         <div class="men-pro-item simpleCart_shelfItem">
                                             <div class="men-thumb-item text-center">
-                                                <img src="/Content/assets/images/@item.HinhAnh1" alt="">
+                                                <img src="/Content/assets/images/@item.HinhAnh1" alt="" style="width:200px;height:200px">
                                                 <div class="men-cart-pro">
                                                     <div class="inner-men-cart-pro">
                                                         <a href="/Home/Product/@item.MaSP" class="link-product-add-cart">Xem chi tiết</a>
@@ -168,7 +168,7 @@
                                     <div class="col-md-4 product-men mt-5">
                                         <div class="men-pro-item simpleCart_shelfItem">
                                             <div class="men-thumb-item text-center">
-                                                <img src="/Content/assets/images/@item.HinhAnh1" alt="">
+                                                <img src="/Content/assets/images/@item.HinhAnh1" alt="" style="width:200px;height:200px">
                                                 <div class="men-cart-pro">
                                                     <div class="inner-men-cart-pro">
                                                         <a href="/Home/Product/@item.MaSP" class="link-product-add-cart">Xem chi tiết</a>
@@ -226,7 +226,7 @@
                                     <div class="col-md-4 product-men mt-5">
                                         <div class="men-pro-item simpleCart_shelfItem">
                                             <div class="men-thumb-item text-center">
-                                                <img src="/Content/assets/images/@item.HinhAnh1" alt="">
+                                                <img src="/Content/assets/images/@item.HinhAnh1" alt="" style="width:200px;height:200px">
                                                 <div class="men-cart-pro">
                                                     <div class="inner-men-cart-pro">
                                                         <a href="/Home/Product/@item.MaSP" class="link-product-add-cart">Xem chi tiết</a>
