--- a/HidenIntelligence/Views/Home/SearchResult.cshtml
+++ b/HidenIntelligence/Views/Home/SearchResult.cshtml
@@ -42,7 +42,7 @@
                                 <div class="col-md-4 product-men">
                                     <div class="men-pro-item simpleCart_shelfItem">
                                         <div class="men-thumb-item text-center">
-                                            <img src="Content/assets/images/@item.HinhAnh1" alt="">
+                                            <img src="/Content/assets/images/@item.HinhAnh1" alt="" style="width:200px;height:200px">
                                             <div class="men-cart-pro">
                                                 <div class="inner-men-cart-pro">
                                                     <a href="/Home/Product/@item.MaSP" class="link-product-add-cart">Quick View</a>
