Hoàn thiện đề tài

--- a/HidenIntelligence/Views/Home/Index.cshtml
+++ b/HidenIntelligence/Views/Home/Index.cshtml
@@ -148,7 +148,8 @@
                                                             <input type="hidden" name="currency_code" value="VND" />
                                                             <input type="hidden" name="return" value=" " />
                                                             <input type="hidden" name="cancel_return" value=" " />
-                                                            <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                            <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
+                                                            @*<input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />*@
                                                         </fieldset>
                                                     </form>
                                                 </div>
@@ -195,7 +196,8 @@
                                                             <input type="hidden" name="currency_code" value="VND" />
                                                             <input type="hidden" name="return" value=" " />
                                                             <input type="hidden" name="cancel_return" value=" " />
-                                                            <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                            <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
+                                                            @*<input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />*@
                                                         </fieldset>
                                                     </form>
                                                 </div>
