--- a/HidenIntelligence/Views/Shared/_Layout.cshtml
+++ b/HidenIntelligence/Views/Shared/_Layout.cshtml
@@ -215,7 +215,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <input type="hidden" name="cmd" value="_cart">
                                     <input type="hidden" name="display" value="1">
                                     <button class="btn w3view-cart" type="submit" name="submit" value="">
-                                        <i class="fas fa-cart-arrow-down"></i>
+                                        <a href="@Url.Action("index1","Cart")"><i class="fas fa-cart-arrow-down"></i></a>                                      
                                     </button>
                                 </form>
                             </div>
