--- a/HidenIntelligence/Views/Cart/Index1.cshtml
+++ b/HidenIntelligence/Views/Cart/Index1.cshtml
@@ -18,97 +18,137 @@
 </div>
 
 <div>
-    <form method="post" action="~/Cart/updatecart">
-        <div id="outermain">
-            <div id="maincontainer">
-                <div class="container">
-                    <div class="row">
-                        <section id="maincontent">
-                            <section id="content" class="twelve columns">
-                                <div id="ts-portfolio">
-                                    <div class="text-right">
-                                        <p class="social">
-                                            <a href="~/home/Login">
-                                                <img src="/Content/User/Content/img-comment/logout-icon.png" alt="facebook" />Đăng Xuất
-                                            </a>
-                                        </p>
-                                        <div>
-                                            <a href="~/home/index">Quay lại shopping</a>
-                                            <button type="submit">Cập nhật giỏ hàng</button>
-                                        </div>
+    <div id="outermain">
+        <div id="maincontainer">
+            <div class="container">
+                <div class="row">
+                    <form method="post" action="~/Cart/UpdateCart">
+                        @*<section id="maincontent">
+                <section id="content" class="twelve columns">*@
+                        <div id="ts-portfolio">
+                            <br />
+                            <table style="width: 150%" class="table">
+                                <thead>
+                                <th>
+                                    Ảnh sản phẩm
+                                </th>
+                                <th>
+                                    Tên sản phẩm
+                                </th>
+                                <th>
+                                    Giá
+                                </th>
+                                <th>
+                                    Số lượng
+                                </th>
+                                <th>
+                                    Thành tiền
+                                </th>
+                                <th>
+                                    Action
+                                </th>
+                                </thead>
+
+                                <tbody>
+                                    @{ int i = 0;}
+                                    @{ double? sum = 0;}
+                                    @*   @{ TimeSpan songay;}
+                            @{songay = @ViewBag.ngay2 - @ViewBag.ngay1;}*@
+                                    @foreach (CartItem it in Model.Lines)
+                                    {
+                                        <tr>
+                                            <td>
+                                                <img height="100px" width="100px" alt="imagesanpham" src="~/Content/assets/images/@it.Sanpham.HinhAnh1">
+                                            </td>
+                                            <td>
+                                                @it.Sanpham.TenSP
+                                            </td>
+                                            <td class="text-center">@it.Sanpham.DonGia.GetValueOrDefault().ToString("N0") VNĐ </td>
+                                            <td class="qty">
+                                                <input type="hidden" name="maphong[@i]" value="@it.Sanpham.MaSP" />
+                                                <input type="text" name="qty[@i]" class="cart-input" value="@it.Quantity" />
+                                            </td>
+                                            <td class="subtotal">@((it.Quantity * it.Sanpham.DonGia.GetValueOrDefault(0)).ToString("N0"))   VNĐ</td>
+
+                                            <td class="text-center"><a class="btn-remove" href="/Cart/RemoveLine/@it.Sanpham.MaSP"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
+                                        </tr>
+                                        sum += it.Quantity * it.Sanpham.DonGia;
+                                        i += 1;
+                                    }
+                                </tbody>
+                                <div class="text-right">
+                                    <div>
+                                        <a href="~/home/index">Quay lại shopping</a>
+                                        <button type="submit">Cập nhật giỏ hàng</button>
                                     </div>
-                                    <br />
-                                    <table style="width: 100%">
-                                        <thead>
-                                        <th>
-                                            Ảnh sản phẩm
-                                        </th>
-                                        <th>
-                                            Tên sản phẩm                                     </th>
-                                        <th>
-                                            Giá
-                                        </th>
-                                        <th>
-                                            Số lượng 
-                                        </th>
-                                        <th>
-                                            Thành tiền
-                                        </th>
-                                        <th>
-                                            Action
-                                        </th>
-                                        </thead>
-
-                                        <body>
-                                            @{ int i = 0;}
-                                            @{ double? sum = 0;}
-                                            @*   @{ TimeSpan songay;}
-                                                @{songay = @ViewBag.ngay2 - @ViewBag.ngay1;}*@
-                                            @foreach (CartItem it in Model.Lines)
-                                            {
-                                                <tr>
-                                                    <td>
-                                                       
-                                                            <img height="100px" width="100px" alt="imagesanpham" src="~/Content/assets/images/@it.Sanpham.HinhAnh1">
-                                                       
-                                                    </td>
-                                                    <td>
-                                                        @it.Sanpham.TenSP
-
-                                                    </td>
-                                                    <td class="text-center">@it.Sanpham.DonGia.GetValueOrDefault().ToString("N0") VNĐ </td>
-                                                    <td class="qty">
-
-                                                        <input type="hidden" name="maphong[@i]" value="@it.Sanpham.MaSP" />
-                                                        <input type="text" name="qty[@i]" class="cart-input" value="@it.Quantity" />
-                                                    </td>
-                                                    <td class="subtotal">@((it.Quantity * it.Sanpham.DonGia.GetValueOrDefault(0)).ToString("N0"))   VNĐ</td>
-
-                                                    <td class="text-center"><a class="btn-remove" href="/Cart/RemoveLine/@it.Sanpham.MaSP"><i class="fa fa-trash" aria-hidden="true"></i></a></td>
-                                                </tr>
-                                                sum += it.Quantity * it.Sanpham.DonGia;
-                                                i += 1;
-                                            }
-                                        </body>
-                                    </table>
-                                    <br />
-                                    <div class="row">
-                                        <div class="col-md-4"></div>
-                                        <div class="col-md-4">
-                                            <a href="~/home/index"><h2>Xác nhận</h2></a>
-                                        </div>
-                                        <div class="col-md-4"> <h2 style="text-align: right">Tổng tiền: @sum VNĐ</h2> </div>
-                                    </div>
-                                    @*<div class="clear"></div>
-                                        <h2 style="text-align: right">Tổng tiền: @sum VNĐ</h2>*@
                                 </div>
-                            </section>
-                        </section>
+                            </table>
+                            <br />
+                            <div class="row">
+                                <div class="col-md-4"></div>
+                                @*<div class="col-md-4">
+                                    <a href="~/home/index"><h2>Xác nhận</h2></a>
+                                </div>*@
+                                <div class="col-md-4"> <h2 style="text-align: right">Tổng tiền: @sum VNĐ</h2> </div>
+                            </div>
+                            @*<div class="clear"></div>
+                    <h2 style="text-align: right">Tổng tiền: @sum VNĐ</h2>*@
+                        </div>
+                        @*</section>
+                </section>*@
+                    </form>
+                </div>
+
+
+
+                <div class="checkout-left">
+                    <div class="address_form_agile mt-sm-5 mt-4">
+                        <h4 class="mb-sm-4 mb-3">Vui lòng điền thông tin</h4>
+                        <form action="/Cart/xacnhan" method="post" class="creditly-card-form agileinfo_form">
+                            <div class="creditly-wrapper wthree, w3_agileits_wrapper">
+                                <div class="information-wrapper">
+                                    <div class="first-row">
+                                        <div class="controls form-group">
+                                            <input class="billing-address-name form-control" type="text" name="TenKH" placeholder="Họ và tên" required="">
+                                        </div>
+                                        <div class="w3_agileits_card_number_grids">
+                                            <div class="w3_agileits_card_number_grid_left form-group">
+                                                <div class="controls">
+                                                    <input type="text" class="form-control" placeholder="Số điện thoại" name="SDT" required="">
+                                                </div>
+                                            </div>
+                                            <div class="w3_agileits_card_number_grid_right form-group">
+                                                <div class="controls">
+                                                    <input type="text" class="form-control" placeholder="Địa chỉ" name="DiaChi" required="">
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="controls form-group">
+                                            <input type="text" class="form-control" placeholder="Email" name="Email" required="">
+                                        </div>
+                                        <div class="controls form-group">
+                                            <select class="option-w3ls">
+                                                <option>Lựa chọn kiểu địa chỉ</option>
+                                                <option>Văn phòng</option>
+                                                <option>Nhà riêng</option>
+                                                <option>Commercial</option>
+
+                                            </select>
+                                        </div>
+                                    </div>
+                                    <button type="submit" class="submit check_out btn">Xác Nhận</button>
+                                    <hr />
+                                </div>
+                            </div>
+                        </form>
                     </div>
                 </div>
+
+
+
             </div>
         </div>
-    </form>
+    </div>
 
     <style>
         th {
