Đức chỉnh sửa hoàn thiện

--- a/HidenIntelligence/Views/CS/Index.cshtml
+++ b/HidenIntelligence/Views/CS/Index.cshtml
@@ -70,7 +70,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -120,7 +120,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -170,7 +170,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -221,7 +221,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
