--- a/HidenIntelligence/Views/PK/Index.cshtml
+++ b/HidenIntelligence/Views/PK/Index.cshtml
@@ -69,7 +69,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -119,8 +119,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -169,8 +168,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -220,8 +218,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -270,8 +267,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -320,8 +316,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -370,8 +365,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -420,8 +414,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -470,8 +463,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
-                                                    </fieldset>
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>                                                    </fieldset>
                                                 </form>
                                             </div>
 
@@ -520,7 +512,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
