--- a/HidenIntelligence/Views/CB/Index.cshtml
+++ b/HidenIntelligence/Views/CB/Index.cshtml
@@ -69,7 +69,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -119,7 +119,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -169,7 +169,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -220,7 +220,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -270,7 +270,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -320,7 +320,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
@@ -370,7 +370,7 @@
                                                         <input type="hidden" name="currency_code" value="VND" />
                                                         <input type="hidden" name="return" value=" " />
                                                         <input type="hidden" name="cancel_return" value=" " />
-                                                        <input type="submit" name="submit" value="Thêm vào giỏ" class="button btn" />
+                                                        <a class="button" href="/Cart/AddItem/@item.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
                                                     </fieldset>
                                                 </form>
                                             </div>
