--- a/HidenIntelligence/Views/Home/Product.cshtml
+++ b/HidenIntelligence/Views/Home/Product.cshtml
@@ -95,7 +95,8 @@
                                 <input type="hidden" name="currency_code" value="VND" />
                                 <input type="hidden" name="return" value=" " />
                                 <input type="hidden" name="cancel_return" value=" " />
-                                <input type="submit" name="submit" value="Thêm vào giỏ" class="button" />
+                                <a class="button" href="/Cart/AddItem/@Model.MaSP?ReturnURL = @Request.RawUrl">Thêm vào giỏ</a>
+                                @*<input type="submit" name="submit" value="Thêm vào giỏ" class="button" />*@
                             </fieldset>
                         </form>
                     </div>
